<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TimerControl">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView android:text="@string/st_menu_title" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/st_title_txt"
            android:textAlignment="center"
            android:textSize="25sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView android:text="@string/st_interval_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/st_interval_txt"
                    android:textAlignment="center"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:textSize="25sp"
                        android:id="@+id/st_interval_h_num" />

                    <TextView
                        android:text="@string/st_timesep_str"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:textSize="25sp"
                        android:id="@+id/st_interval_m_num" />

                    <TextView
                        android:text="@string/st_timesep_str"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:textSize="25sp"
                        android:id="@+id/st_interval_s_num" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView android:text="@string/st_period_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/st_length_txt"
                    android:textAlignment="center"
                    android:textSize="15sp"/>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:textSize="25sp"
                        android:id="@+id/st_for_h_num" />

                    <TextView
                        android:text="@string/st_timesep_str"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:textSize="25sp"
                        android:id="@+id/st_for_m_num" />

                    <TextView
                        android:text="@string/st_timesep_str"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp" />

                    <EditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:textSize="25sp"
                        android:id="@+id/st_for_s_num" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/st_consec_timer_toggle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/st_consecutive_txt"
                android:textSize="15sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:id="@+id/st_consecutive_cb" />

            <Button
                android:text="@string/st_add_btn_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/st_add_btn"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/st_timers_lv"
                android:choiceMode="singleChoice"
                android:clickable="true"
                android:contentDescription="@string/st_timers_lv_desc"
                android:dividerHeight="2dp"
                android:drawSelectorOnTop="false"
                android:fastScrollAlwaysVisible="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:footerDividersEnabled="false"
                android:stackFromBottom="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    android:text="@string/st_remove_timer_btn_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/st_remove_timer_btn"
                    android:textSize="10sp"/>

                <Button
                    android:text="@string/st_reset_timers_btn_str"
                    android:gravity="bottom"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/st_reset_timers_btn"
                    android:textSize="10sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:text="@string/st_repeat_cb_label_txt"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/st_repeat_cb_label" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/st_repeat_cb" />

            </LinearLayout>

            <Button
                android:text="@string/st_pebble_btn_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/st_pebble_btn"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
